Ensure that the ham navigation is always visible on the index mobile view (don't show text navigation)

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -601,6 +601,13 @@ a {
     font-size: .9em;
   }
 
+  .ham-menu {
+    display: block !important;
+  }
+
+  #top-nav {
+    display: none !important;
+  }
   .nav-modal {
     .inner {
       .modal-logo {
